ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-app-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/group.name: test-app-group
spec:
  ingressClassName: alb
  rules:
    - host: app3.ajml.online  
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-app-service
                port:
                  number: 80
